# mailersend-python

./: .envrc  .gitignore  .pre-commit-config.yaml  .pypirc  MANIFEST.in  README.md  flake.nix  lefthook.yml  pyproject.toml  setup.py  test.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yaml  test.yaml
examples/: analytics_example.py  builder_pattern_example.py  debug_logging_example.py  domains_example.py  email_verification_example.py  templates_example.py  tokens_example.py  users_example.py  webhooks_example.py
mailersend/: __init__.py  async_client.py  base_client.py  client.py  constants.py  exceptions.py  logging.py
mailersend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mailersend/activity/: __init__.py  activity.py
mailersend/analytics/: __init__.py  analytics.py
mailersend/api_quota/: __init__.py
mailersend/base/: __init__.py  base.py
mailersend/builders/: __init__.py  activity.py  analytics.py  dmarc_monitoring.py  domains.py  email.py  email_verification.py  identities.py  inbound.py  messages.py  recipients.py  schedules.py  sms_activity.py  sms_inbounds.py  sms_messages.py  sms_numbers.py  sms_recipients.py  sms_sending.py  sms_webhooks.py  smtp_users.py  templates.py  tokens.py  users.py  webhooks.py  whatsapp.py
mailersend/domains/: __init__.py
mailersend/email_verification/: __init__.py
mailersend/emails/: __init__.py  emails.py
mailersend/endpoints/: activity.py  domains.py  emails.py  messages.py  recipients.py  templates.py  token.py  webhooks.py
mailersend/inbound_routing/: __init__.py
mailersend/messages/: __init__.py
mailersend/models/: __init__.py  activity.py  analytics.py  base.py  dmarc_monitoring.py  domains.py  email.py  email_verification.py  identities.py  inbound.py  messages.py  recipients.py  schedules.py  sms_activity.py  sms_inbounds.py  sms_messages.py  sms_numbers.py  sms_recipients.py  sms_sending.py  sms_webhooks.py  smtp_users.py  templates.py  tokens.py  users.py  webhooks.py  whatsapp.py
mailersend/recipients/: __init__.py  recipients.py
mailersend/resources/: __init__.py  (+26 more)
test/: test_mailersend.py
tests/: conftest.py  test_helpers.py  test_mailersend.py
(+411 files in other folders)
