[tool.poetry]
authors = ["MailerLite <tech@mailerlite.com>"]
description = "The official MailerLite Python SDK"
name = "mailersend"
version = "2.0.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = {extras = ["email"], version = "^2.11.0"}

[tool.poetry.dev-dependencies]
black = "^25.0.0"
coverage = "^7.0.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
python-dotenv = "^0.21.0"
python-semantic-release = "^7.32.2"
vcrpy = "^7.0.0"
pre-commit = "^2.12.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = "setup.py:__version__"