[project]
name = "mailersend"
version = "2.0.3"
description = "The official MailerLite Python SDK"
authors = [{name = "MailerLite", email = "tech@mailerlite.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.1",
    "pydantic[email]>=2.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.0.0",
    "pre-commit>=2.12.1",
    "pytest>=9.0.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=0.21.0",
    "python-semantic-release>=7.32.2",
    "ruff>=0.9.0",
    "vcrpy>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
branch = "main"
build_command = "pip install uv && uv build"
upload_to_pypi = false
upload_to_release = true
version_variable = "setup.py:__version__"

[tool.ruff]
line-length = 88

[tool.ruff.format]
# black-compatible defaults
